<resources>
    <string name="app_name">demo_1.0</string>
    <string name="s_l_name">Log in</string>
    <string name="login">Log in</string>
    <string name="sign">Sign up</string>
    <string name="log">Log in</string>
    <string name="back_button">To menu</string>
    <string name="menu">Menu</string>
    <string name="log_incident">Log new incident</string>
    <string name="view_incidents">View past incidents</string>
    <string name="my_information">My information</string>
    <string name="my_insurance_info">My insurance information</string>
    <string name="incident_name">Random incident</string>
    <string name="add_car">Add new car</string>
    <string name="submit">Submit</string>
    <string name="title_activity_view_pat_incidents">ViewPatIncidents</string>
    <string name="title_activity_my_information">MyInformation</string>
    <string name="backb">Back</string>
    <string name="add_car_but">Add CAr</string>
    <string name="logout">Log out</string>
    <string name="new_sign_up">Don\'t have an account? Sign up</string>


    <string name="password">Password</string>
    <string name="email">Email</string>


    <string name="text_enter_email">Email</string>
    <string name="text_enter_password">Password</string>
    <string name="text_enter_forename">First name</string>
    <string name="text_enter_surname">Last name</string>
    <string name="text_reenter_password">Reenter password</string>


    <string name="title_activity_main_view">MainView</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="text_enter_date_of_birth">Date of birth</string>
    <string name="text_enter_username">Username</string>
    <string name="button_male">Male</string>
    <string name="button_female">Female</string>
    <string name="button_next">Next</string>
    <string name="text_car_info">Input car information</string>
    <string name="text_input_car_model">Model</string>
    <string name="text_input_car_make">Make</string>
    <string name="text_input_car_registration_num">Registration number</string>
    <string name="button_submit">Submit</string>
    <string name="text_incident_date">Date</string>
    <string name="text_incident_description">Describe the incident</string>
    <string name="text_incident_location">Incident_location // don\'t know how to do this yet :)</string>
    <string name="title_activity___main_login">_MainLogin</string>
    >


</resources>
